Updated terms of service and privacy policy.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <meta name="twitter:description" content="{{ page.description }}">
   <meta name="twitter:image" content="{{ page.logo }}">
   <meta name="twitter:card" content="summary_large_image">
+  <!-- <meta name="apple-itunes-app" content="app-id=myAppStoreID"> -->
   <link rel="icon" type="image/png" href="/assets/images/favicon.png" />  
 
   <link rel="stylesheet" href="/assets/css/base.css">
