--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "Verkout Privacy Policy"
-description: "Privacy policy for Verkout"
+title: "Verkout Terms of Service"
+description: "Terms of Service for Verkout"
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
@@ -13,7 +13,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:description" content="{{ page.description }}">
   <meta property="og:image" content="{{ page.logo }}">
-  <meta property="og:url" content="https://verkout.com/privacy">
+  <meta property="og:url" content="https://verkout.com/terms">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="{{ page.description }}">
   <meta name="twitter:image" content="{{ page.logo }}">
@@ -32,26 +32,6 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     .palette {
       background-color: #000000
     }
-
-    /* .palette .primary-color {
-      color: #F2D308
-    }
-
-    .palette .secondary-color {
-      color: #DDDDDD
-    }
-
-    .palette .accent-bg {
-      background-color: #F2D308
-    }
-
-    .palette .secondary-bg {
-      background-color: #2898FB
-    }
-
-    .palette .svg-fill {
-      fill: #FFFFFF
-    } */
   </style>
 </head>
 
@@ -60,14 +40,14 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">      
         <!-- Termly Tracking Code -->
 
-        <div name="termly-embed" data-id="5a63b5c2-ba83-47a5-b2ca-2bcbadca3285" data-type="iframe"></div>
-        <script type="text/javascript">(function(d, s, id) {
-          var js, tjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "https://app.termly.io/embed-policy.min.js";
-          tjs.parentNode.insertBefore(js, tjs);
-        }(document, 'script', 'termly-jssdk'));</script>        
+      <div name="termly-embed" data-id="37f315db-4bbc-45d8-a0be-98b66e4b4cc9" data-type="iframe"></div>
+      <script type="text/javascript">(function(d, s, id) {
+        var js, tjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "https://app.termly.io/embed-policy.min.js";
+        tjs.parentNode.insertBefore(js, tjs);
+      }(document, 'script', 'termly-jssdk'));</script>     
       
     </section>
   </div>    
