Link to the iOS download location in the app store.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <meta name="twitter:description" content="{{ page.description }}">
   <meta name="twitter:image" content="{{ page.logo }}">
   <meta name="twitter:card" content="summary_large_image">
-  <!-- <meta name="apple-itunes-app" content="app-id=myAppStoreID"> -->
+  <meta name="apple-itunes-app" content="app-id=1505620734">
   <link rel="icon" type="image/png" href="/assets/images/favicon.png" />  
 
   <link rel="stylesheet" href="/assets/css/base.css">
@@ -81,11 +81,11 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
             Verkout showcases <span class="glowing">one Instagram fitness professional</span> 
             each day, their <span class="glowing">20-to-30-minute full-body workout</span>, and the <span class="glowing">top products they endorse</span>.</h2>
           <!---->
-          <!-- <div class="mt40">
-            <a href="" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
+          <div class="mt40">
+            <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
               <span>Download for iOS</span>
             </a>
-          </div> -->
+          </div>
         </div>
         
         <div class="col-6 mobile-text-center">
