Try a meta tag to instruct opening of a specific workout in the app.

--- a/workouts/44.html
+++ b/workouts/44.html
@@ -31,6 +31,7 @@ So, grab a kitchen towel and try these 7 moves:
 It doesn’t have to be blood, sweat and tears in a gym count as a workout. Mix it up! Have fun! Do you!">
         <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/53362084.jpg">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/44">
       
         <!-- Mobile Specific Metas
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
