Enable all workouts to be opened directly in app.

--- a/workouts/100.html
+++ b/workouts/100.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>verkeng_test's Full Body Seaside Sweat!</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/100">
         <meta name="description" content="Full Body Seaside Sweat! from @verkeng_test: 5 simple movements for 40s on / 20s off. You’ve got this!💪🏼.#workoutathome #homeworkout" />
         <meta name="author" content="@verkeng_test (Austin-based fitness instructor and motivator.
 Work with me to build consistent, positive habits!)" />
