--- a/workouts/101.html
+++ b/workouts/101.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>verkeng_test's At-Home Full Body EMOM 24</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/101">
         <meta name="description" content="At-Home Full Body EMOM 24 from @verkeng_test: Grab a pair of dumbbells and let's get going! Every minute on the minute, do the exercise for the number of reps I've specified. Rest for whatever time remains in that minute.
 
 Join me every Tuesday for my #beachworkouts with the rest of the crew." />
