--- a/workouts/102.html
+++ b/workouts/102.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>verkeng_test's A Full Deck of Full-Body Work</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/102">
         <meta name="description" content="A Full Deck of Full-Body Work from @verkeng_test: We're gonna hit the (card) deck for this one. 4 suits, 4 exercises. You know the drill. This time, all face cards will be worth 10 reps and Aces are worth 15." />
         <meta name="author" content="@verkeng_test (Austin-based fitness instructor and motivator.
 Work with me to build consistent, positive habits!)" />
