--- a/workouts/103.html
+++ b/workouts/103.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>joshwebbb_'s 🔥Wall Challenge 🙌🏾🔥</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/103">
         <meta name="description" content="🔥Wall Challenge 🙌🏾🔥 from @joshwebbb_: If you are stuck at home and don’t have access to a gym give this workout a try! You only need a wall and weights, if you don’t have weights fill a backpack and improvise 🤪!
 
 Shorts by @tlfapparel use promo code “TLF-JOSH” for discount!
