--- a/workouts/104.html
+++ b/workouts/104.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>olivia.poling's Full Body Sweat</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/104">
         <meta name="description" content="Full Body Sweat from @olivia.poling: EMOM: every minute on the minute! Complete each number of reps within a minute duration. If you have time left over use that to rest. Then when the minute changes switch to the next exercise!" />
         <meta name="author" content="@olivia.poling (Personal Trainer | Los Angeles📍
 ISSA certified Nutrition Coach
