--- a/workouts/48.html
+++ b/workouts/48.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>tcrosleyfit's Full Body Circuit</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/48">
         <meta name="description" content="Full Body Circuit from @tcrosleyfit: I’ve been doing mostly full body workouts for the past year and allowing myself more days to rest and recover. I know everyone is different, but I feel more satisfied training this way. I sweat more and feel amazing (and whooped🥵) after.. not to mention, the results are showing! Sometimes a simple change up in your routine can make a worlds of difference mentally and physically🙌🏼 don’t be afraid to play around with your fitness routine and switch up! 
 Here’s the FULL BODY circuit: do 4 rounds with 1 minute rest in between each round 
 ✖️Sumo Squat Pulses x30 sec
