--- a/workouts/61.html
+++ b/workouts/61.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>spinsyddy's 🌟 30 MIN HIIT @ HOME 🌟</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/61">
         <meta name="description" content="🌟 30 MIN HIIT @ HOME 🌟 from @spinsyddy: Join me for a SWEATY AS HECK home workout that involves no equipment, just that strong body of yours 💪🏼
 THANK YOU to everyone who joined my IG LIVE session!
 ➡️ Make sure to TAG me in your sweaty selfies @spinsyddy & share with a friend who you’d do the workout with!
