--- a/workouts/72.html
+++ b/workouts/72.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>get_roped's GET ROPED LIVE SERIES-full body cardio & strength</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/72">
         <meta name="description" content="GET ROPED LIVE SERIES-full body cardio & strength from @get_roped: Tonight we did a 20 minute full body workout of 3-4 minute intervals alternating between cardio and strength! Totaling 11 mins of jump cardio and 9 minutes of strength focused on core, shoulders and lower body. 
 Remember, 10 minutes of jumping rope a day is all u need! It is equivalent in calorie burn 🔥 to 30 minutes of running on the treadmill at 7.5 mph, and way more fun! (And way more time efficient!) So let’s #GETROPED ➰➰➰
 #jumprope #jumpropeworkout #jumpropefitness #cardioworkout #jumpropecardio #fullbodyworkout #abworkout #chicagofit #chicagofitfam #chicagofitness #skippingrope #getropedin #getropedthin" />
