--- a/workouts/73.html
+++ b/workouts/73.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>brazilian.blue's BODY BURN WORKOUT </title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/73">
         <meta name="description" content="BODY BURN WORKOUT  from @brazilian.blue: Here are a few exercises that will make you feel destroyed at the end. Enjoy the burn.
  
 Outfit: @tlfapparel 
