--- a/workouts/74.html
+++ b/workouts/74.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>sandysklarxfit's // Full Body Work //</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/74">
         <meta name="description" content="// Full Body Work // from @sandysklarxfit: Full Body DUMBBELL 🔥
 
 Grab a set of dumbbells and let’s
