--- a/workouts/75.html
+++ b/workouts/75.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>devinfittt's Full-Body Conditioning Routine</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/75">
         <meta name="description" content="Full-Body Conditioning Routine from @devinfittt: Designed to improve athleticism, explosiveness, power, and maximum Fat Loss.🔥
 
 No medicine ball? Substitute an explosive jump.
