--- a/workouts/76.html
+++ b/workouts/76.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>mrandmrsmuscle's Low Impact Full Body Workout</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/76">
         <meta name="description" content="Low Impact Full Body Workout from @mrandmrsmuscle: NO EQUIPMENT Low Impact Super Sweaty Full Body Workout 😁🔥
 
 📢The December Workout Calendars are LIVE on our website! Start your 31-days now! (Link in Bio)
