--- a/workouts/77.html
+++ b/workouts/77.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>mssannamaria's FULL BODY AT THE GYM OR HOME 💗💪🏼</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/77">
         <meta name="description" content="FULL BODY AT THE GYM OR HOME 💗💪🏼 from @mssannamaria: Today it’s time for a full body combo where only a pair of dumbbells is needed 🔥 Let’s goooo! 🤩
 
 Wearing @Ryderwear size XS 💗
