--- a/workouts/78.html
+++ b/workouts/78.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>jtm_fit's 🔥KB/Bodyweight Circuit🔥</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/78">
         <meta name="description" content="🔥KB/Bodyweight Circuit🔥 from @jtm_fit: Grab a pretty heavy kettlebell or dumbbell and get work! This is just a small sample from my full body kettlebell/bodyweight program coming out very soon. Let’s go👊🏻" />
         <meta name="author" content="@jtm_fit (📍New York\nType 1 Diabetic💉\nNASM CPT + CES\n#IAM1STPHORM\n📧: jay@jtmfit.com\n⬇️WORKOUT PROGRAMS + MORE⬇️)" />
         <meta property="og:site_name" content="Verkout">
