--- a/workouts/79.html
+++ b/workouts/79.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>eddiesfitness's Complete Hiit Workout 🔥</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/79">
         <meta name="description" content="Complete Hiit Workout 🔥 from @eddiesfitness: 🔥Complete 3 Cycles & Share with a friend who needs At Home Workouts🔥
 DM for Coaching, Workout Plans, Nutrition Plans 📈" />
         <meta name="author" content="@eddiesfitness (◼️Fitness l Mindset l Motivation 🔥
