--- a/workouts/80.html
+++ b/workouts/80.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>elliotbfit's Full Body Circuit</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/80">
         <meta name="description" content="Full Body Circuit from @elliotbfit: I struggle to enjoy trying to get in standard weight sessions at home and have instead found myself going for circuits / workouts that are shorter but more intense. 25/30 minute workouts, that are really tough, sweaty and intense but get the job done. For me my priority is staying active, healthy & happy during this lockdown and that’s exactly what i’m doing 👌🏽
 
 Wearing @gymshark 🔥" />
