--- a/workouts/81.html
+++ b/workouts/81.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>jillsaundersfit's FULL Body HIIT</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/81">
         <meta name="description" content="FULL Body HIIT from @jillsaundersfit: 💦 A quickie but goodie 🥵 
 
 Two different Trisets for FIVE big bad rounds of burn 😁 Get through each round with minimal rest between exercises. Rest after each round.
