--- a/workouts/82.html
+++ b/workouts/82.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>natacha.oceane's Full Body Burn🔥</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/82">
         <meta name="description" content="Full Body Burn🔥 from @natacha.oceane: These 7 movements will hit your legs, glutes, core and upper body while keeping you moving athletically on top of just getting a burn going 🔥 ⠀
 
 @gymshark #paidpartnership" />
