--- a/workouts/83.html
+++ b/workouts/83.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>niknaidoo's DUMBBELL BLAST 🔥⁣</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/83">
         <meta name="description" content="DUMBBELL BLAST 🔥⁣ from @niknaidoo: One of my favourite workouts from Lockdown 1.0. 
 ⁣⁣
 EMOM 20 (every minute on the minute)⁣
