--- a/workouts/84.html
+++ b/workouts/84.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>lisafiittworkouts's A very sweaty HIIT workout ! 💦🥵</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/84">
         <meta name="description" content="A very sweaty HIIT workout ! 💦🥵 from @lisafiittworkouts: These exercises really challenged my endurance wow 😅 Remember to try and keep the form throughout the workout, GIVE IT YOUR ALL AND HAVE FUN!! You’ll use your core lots in this workout, so make sure to keep it engaged ! 🔥 ⁣@strongandsxy⁣⁣
 
 LETS KEEP IT MOVING 💗💪🏼" />
