--- a/workouts/85.html
+++ b/workouts/85.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>primal.swoledier's 🔥Kettlebell and Bodyweight Shredder🔥</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/85">
         <meta name="description" content="🔥Kettlebell and Bodyweight Shredder🔥 from @primal.swoledier: Throwback videos of one of my favorite circuits! Get it in and get worked 🔥
 
 Song: Toxicity by System of a Down" />
