--- a/workouts/86.html
+++ b/workouts/86.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>kimfrench87's Full Body Burner</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/86">
         <meta name="description" content="Full Body Burner from @kimfrench87: The biggest challenge about training full body this way is the TUT (time under tension). The more TUT placed on a muscle, the harder it will work.
 The squat hold with lateral shoulder rotation was FIRE 🔥😭👏🏻
 
