--- a/workouts/87.html
+++ b/workouts/87.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>georgebamfojr's Metabolic Workout</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/87">
         <meta name="description" content="Metabolic Workout from @georgebamfojr: Perfect workout to burn off all the thanksgiving food you consumed! ⁣⁣
 
 Pants by @gymshark
