--- a/workouts/88.html
+++ b/workouts/88.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>personaltrainingbyalisonsmith's TOTAL BODY WORKOUT</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/88">
         <meta name="description" content="TOTAL BODY WORKOUT from @personaltrainingbyalisonsmith: Six moves for you today split up into two circuits using dumbbells, bands & a Terracore bench! 
 " />
         <meta name="author" content="@personaltrainingbyalisonsmith (▫️Certified Personal Trainer: Approachable l Flexible\n▫️Fitness Programs: Comprehensive | One-on-one\n▫️Private Studio: Distraction-free | Comfortable)" />
