--- a/workouts/89.html
+++ b/workouts/89.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>annieopenshaw's FULL BODY Circuit</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/89">
         <meta name="description" content="FULL BODY Circuit from @annieopenshaw: A fabulous full body circuit, perfect for if you are needing something a little more low impact! 
 
 Outfit: @myproteinuk, acid wash seamless leggings + power mesh bra." />
