--- a/workouts/90.html
+++ b/workouts/90.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>paulsklarxfit's Full Body Biceps and Legs Blitz🛡⚔️⁣</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/90">
         <meta name="description" content="Full Body Biceps and Legs Blitz🛡⚔️⁣ from @paulsklarxfit: 💡 Keep your knee just off of the floor during all lunges. You need serious leg strength and arm strength to complete this work out, as well as endurance👍🏼⁣" />
         <meta name="author" content="@paulsklarxfit (Professional Trainer CSCS\nFormer World Ranked Pro Duathlete\nOwner @prescriptive.fitness\n48, Father of 5 💍 @sandysklarxfit\n⬇️MY PROGRAM⬇️)" />
         <meta property="og:site_name" content="Verkout">
