--- a/workouts/91.html
+++ b/workouts/91.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>brickbuiltstrength's 💣KB WORKOUT!</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/91">
         <meta name="description" content="💣KB WORKOUT! from @brickbuiltstrength: 🧱FOUNDATIONAL BRICKS🧱
 
 KB workout challenge! Got my bells and snagged some vitamin D. Testing coordination and endurance with this one. Love playing around with the kettle bell and channeling my inner @primal.swoledier . Test this burner out and be sure to save and share🙌🏾. 
