--- a/workouts/92.html
+++ b/workouts/92.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>champcityatx's 🔥 Dumbbell Full Body Conditioning </title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/92">
         <meta name="description" content="🔥 Dumbbell Full Body Conditioning  from @champcityatx: Workout notes:  Each round switch hands with OH lunge or switch half way through the reps.  Each push-up in the alligator exercise is one rep. Each row is one rep and alternate starting hands each round.  Use a weight that works for you 👊
 
 Song: “Sweetness ” by JImmy Eat World
