--- a/workouts/93.html
+++ b/workouts/93.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>massy.arias's Full Body At Home HIIT Workout</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/93">
         <meta name="description" content="Full Body At Home HIIT Workout from @massy.arias: If you liked this workout join my @mawarriors community and out #ma45day at home program and we will accomplish our goals from the safety of our home. Link in bio, let’s get it tribe. 
 
 Music @theavenermusic 
