--- a/workouts/94.html
+++ b/workouts/94.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>mia_fitness's HIIT Cardio Routine</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/94">
         <meta name="description" content="HIIT Cardio Routine from @mia_fitness: 👉🏽Make sure you earned those extra calories today by perform this HIIT cardio routine from the comfort of your living room or the gym!" />
         <meta name="author" content="@mia_fitness (🇻🇪Warrior
 ♻️Hybrid Athlete
