--- a/workouts/95.html
+++ b/workouts/95.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>abbbfitness's FULL BODY LONG-BAND BLAST!!!</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/95">
         <meta name="description" content="FULL BODY LONG-BAND BLAST!!! from @abbbfitness: Lockdown workouts will get a whole lot easier with these bands to intensify your workouts🔥🔥🔥
 
 To target ur quads have the band on ur neck, for glutes place it on ur back 🤍
