--- a/workouts/96.html
+++ b/workouts/96.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>spinsyddy's 🔸 FULL BODY BABY 🔸</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/96">
         <meta name="description" content="🔸 FULL BODY BABY 🔸 from @spinsyddy: No equipment needed (what’s new?) & only takes 30 minutes of your day!
 
 Have at it & TAG @spinsyddy when you complete it!" />
