--- a/workouts/97.html
+++ b/workouts/97.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>everygotdamndre's KETTLEBELL WORKOUT</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/97">
         <meta name="description" content="KETTLEBELL WORKOUT from @everygotdamndre: Use a dumbbell or other weight if you do not have a kettlebell.
 
 INTEGRITY. ATTITUDE. HUSTLE. ❗️👍🏽 
