--- a/workouts/98.html
+++ b/workouts/98.html
@@ -5,6 +5,7 @@
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8" />
         <title>avh__fitness's Full Body EMOM (no weights)</title>
+        <meta name="apple-itunes-app" content="app-id=1505620734, app-argument=https://verkout.com/workouts/98">
         <meta name="description" content="Full Body EMOM (no weights) from @avh__fitness: Complete the EMOM for a total of 5 rounds for 40 seconds on followed by 20 seconds off (25 minutes total)
 1️⃣ side to side toe touch jumps 
 2️⃣ plank jack shoulder taps 
