Update workout page avatar references.

--- a/workouts/87.html
+++ b/workouts/87.html
@@ -21,7 +21,7 @@ Follow @heuristiclifestyle ⁣@levelupshow_⁣
 Pants by @gymshark
 Follow @heuristiclifestyle ⁣@levelupshow_⁣
 ⁣">
-        <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/37544131.jpg">
+        <meta property="og:image" content="https://d3ku7zkkqjmli8.cloudfront.net/images/37544131.jpg">
         <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/29f6f3b8-2c19-4709-b99d-fadaccc3a3b9-composite-share.mp4">
         <meta property="og:video:width" content="1080">
         <meta property="og:video:height" content="1920">  
