--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Verkout: the daily Instagram workout"
-description: "No signup. No friction. Verkout showcases one Instagram fitness professional each day, their 20-to-30-minute full-body workout, and the top products they endorse."
+description: "No signup. No friction. Every day, Verkout turns one Instagram post into a structured workout -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
@@ -78,8 +78,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
           <h1 class="heading primary-color">the daily Instagram workout</h1>
           <h2 class="subheading secondary-color mt20">
-            Verkout showcases <span class="glowing">one Instagram fitness professional</span> 
-            each day, their <span class="glowing">20-to-30-minute full-body workout</span>, and the <span class="glowing">top products they endorse</span>.</h2>
+            Every day, Verkout turns one Instagram post into a structured workout -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse.</h2>
           <!---->
           <div class="mt40">
             <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
