Add another download button

--- a/index.html
+++ b/index.html
@@ -143,12 +143,21 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
             Hit a plateau in your fitness level? If you're doing the same thing, week after week, use Verkout to <span class="bold">find new inspiration</span> and mix it up.
           </h3>    
         </div>          
-      </div>
+      </div>      
     </section>
 
-    <section class="section">
+    <section class="section footer-section">
       <div class="container-lrg flex">
-        <div class="flex flex-column col-12 text-center mobile-text-center mb40">
+        <div class="flex flex-column col-12 center-vertical text-center mobile-text-center mb40">
+          <div class="mt40">
+            <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
+              <span>Download for iOS</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="container-lrg flex">
+        <div class="flex flex-column col-12 text-center mobile-text-center mb40">          
           <h2 class="primary-color bold">Have you done your Verkout today?</h2>
           <p class="secondary-color comfy">The iOS app is built by<br/>our small team in Austin, TX.</p>
           <p class="secondary-color"><br/>Android is up next.</p> 
