--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
           <h1 class="heading primary-color">the daily Instagram workout</h1>
           <h2 class="subheading secondary-color mt20">
-            Every day, Verkout turns one Instagram post into a structured workout -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse.</h2>
+            Every day, Verkout turns one Instagram workout into a routine you can run in the app.<br/>Rounds, reps, timers, more.
+          <br/><br/>
+          Always a new fitness professional.<br/>
+          Always a full-body effort in 30 minutes or less.<br/>
+          </h2>
           <!---->
           <div class="mt40">
             <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
