Indicated how to ping us via social.

--- a/support.html
+++ b/support.html
@@ -77,7 +77,14 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
           <h2 class="subheading secondary-color mt20">
             Have a problem? We can help.</h2>
           <h2 class="subheading secondary-color mt20">
-            Email us at <a href="mailto:support@verkout.com" class="primary-color">support@verkout.com</a>.</h2>
+            Email us at <a href="mailto:support@verkout.com" class="primary-color">support@verkout.com</a>.
+          </h2>
+          <h2 class="subheading secondary-color mt20">
+            Tweet us at <a href="https://twitter.com/verkoutapp" class="primary-color">@verkoutapp</a>.
+          </h2>
+          <h2 class="subheading secondary-color mt20">
+            DM us on Instagram <a href="https://instagram.com/verkoutapp" class="primary-color">@verkoutapp</a>.
+          </h2>
         </div>
       </div>
     </section>
