--- a/support.html
+++ b/support.html
@@ -83,7 +83,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
             Tweet us at <a href="https://twitter.com/verkoutapp" class="primary-color">@verkoutapp</a>.
           </h2>
           <h2 class="subheading secondary-color mt20">
-            DM us on Instagram <a href="https://instagram.com/verkoutapp" class="primary-color">@verkoutapp</a>.
+            DM us on Instagram at <a href="https://instagram.com/verkoutapp" class="primary-color">@verkoutapp</a>.
           </h2>
         </div>
       </div>
