--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <meta property="og:description" content="{{ page.description }}">
   <meta property="og:image" content="{{ page.logo }}">
   <meta property="og:url" content="https://www.verkout.com">
-  <meta property="og:video" content="https://d3ku7zkkqjmli8.cloudfront.net/videos/welcome.mp4">
+  <meta property="og:video" content="https://d3ku7zkkqjmli8.cloudfront.net/videos/verkout-tall-15sec-4.mp4">
   <meta property="og:video:width" content="540">
   <meta property="og:video:height" content="960">  
   <meta name="twitter:title" content="{{ page.title }}">
@@ -108,7 +108,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
                 poster="https://verkout.com/assets/images/loading.png"
                 data-setup='{ "loop": false, "controls": true}'
               >
-              <source src="https://d3ku7zkkqjmli8.cloudfront.net/videos/welcome.mp4" type="video/mp4">
+              <source src="https://d3ku7zkkqjmli8.cloudfront.net/videos/verkout-tall-15sec-4.mp4" type="video/mp4">
                 <p class="vjs-no-js">
                   To view this video please enable JavaScript, and consider upgrading to a
                   web browser that
