Updated some positioning

--- a/index.html
+++ b/index.html
@@ -126,25 +126,42 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR THE OVERWHELMED</h2>
+          <h2 class="primary-color">FOR BUSY, AGING ATHLETES</h2>
           <h3 class="secondary-color mt20">
-            There are countless great apps, gyms, trainers, and meal plans that work if you're consistent. But where to start? Verkout makes it easy to dip your toe and <span class="bold">see what's out there</span>. Explore, test, then dive in.  
+            If you're an absolute beginner to fitness, you should consider other apps.<br/><br/>The Daily Verkout, always doable in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate difficulty</span>...and occasionally tougher.<br/><br/>There is little hand-holding or instruction. Modify any movements as necessary.
           </h3>          
         </div>          
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR THE UNINSPIRED</h2>
+          <h2 class="primary-color">FROM UNDISCOVERED OR UNDER-CELEBRATED FITNESS TALENT</h2>
           <h3 class="secondary-color mt20">
-            If you've fallen off the fitness wagon -- or you never got on -- this app is the <span class="bold">best place to start</span>. NO SIGNUP means no friction or obligation. Just install the app and go.<br/><br/>Start window shopping for the fitness regimen that fits you.
+            Every workout comes from the pages of someone new on Instagram. Always a new face, new videos, and new movements.<br/><br/>Boredom, begone. Hello, fresh inspiration!
           </h3>    
         </div>          
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR THE BORED</h2>
+          <h2 class="primary-color">ONE QUICK WORKOUT EACH DAY</h2>
           <h3 class="secondary-color mt20">
-            Hit a plateau in your fitness level? If you're doing the same thing, week after week, use Verkout to <span class="bold">find new inspiration</span> and mix it up.
+            ...and nothing else.
+<br/><br/>
+<span class="bold">NO SIGNUP</span>.<br/>
+No email.<br/>
+No goal-setting.<br/>
+No credit card.<br/>
+No questions.<br/>
+<br/><br/>
+<span class="bold">No thinking.<br/>
+JUST MOVING.</span>
+          </h3>    
+        </div>          
+      </div>
+      <div class="container-lrg flex">
+        <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
+          <h2 class="primary-color">DOABLE ANYWHERE</h2>
+          <h3 class="secondary-color mt20">
+            Every day, you'll have access to one bodyweight workout and one workout with common equipment (dumbbells, kettlebells, resistance bands, jumprope, box).<br/><br/>Roll out of bed?<br/>Hit your favorite gym?<br/><br/> Doesn't matter. Just open the app and GET GOING.
           </h3>    
         </div>          
       </div>      
