--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Verkout: the daily Instagram workout"
-description: "No signup. No friction. Every day, Verkout turns one Instagram post into a structured workout -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse."
+description: "No signup. No friction. Every day, Verkout turns one Instagram post into a structured workout experience -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
@@ -82,7 +82,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
           <h1 class="heading primary-color">the daily Instagram workout</h1>
           <h2 class="subheading secondary-color mt20">
-            Every day, Verkout turns one Instagram workout into a routine you can run in the app.<br/>Rounds, reps, timers, more.
+            Every day, Verkout turns one Instagram post into a structured workout experience you can run in the app.<br/>Rounds, reps, timers, more.
           <br/><br/>
           Always a new fitness professional.<br/>
           Always a full-body effort in 30 minutes or less.<br/>
@@ -126,9 +126,9 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR BUSY, AGING ATHLETES</h2>
+          <h2 class="primary-color">FOR BUSY ATHLETES</h2>
           <h3 class="secondary-color mt20">
-            If you're an absolute beginner to fitness, you should consider other apps.<br/><br/>The Daily Verkout, always doable in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate difficulty</span>...and occasionally tougher.<br/><br/>There is little hand-holding or instruction. Modify any movements as necessary.
+            If you're a beginner to fitness, you should consider other apps.<br/><br/>The Daily Verkout, always doable in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate difficulty</span>...and occasionally tougher.<br/><br/>There is little hand-holding or instruction. Modify any movements as necessary.
           </h3>          
         </div>          
       </div>
