more language tweaks

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Verkout: the daily Instagram workout"
-description: "No signup. No friction. Every day, Verkout turns one Instagram post into a structured workout experience -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse."
+description: "No signup. No friction. Every day, Verkout turns one Instagram post into a full workout experience -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
@@ -82,7 +82,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
           <h1 class="heading primary-color">the daily Instagram workout</h1>
           <h2 class="subheading secondary-color mt20">
-            Every day, Verkout turns one Instagram post into a structured workout experience you can run in the app.<br/>Rounds, reps, timers, more.
+            Every day, Verkout turns one Instagram post into a full workout experience you can run in the app.<br/>Rounds, reps, timers, more.
           <br/><br/>
           Always a new fitness professional.<br/>
           Always a full-body effort in 30 minutes or less.<br/>
