--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR BUSY ATHLETES</h2>
+          <h2 class="primary-color">FOR BUSY ATHLETES (CURRENT AND FORMER)</h2>
           <h3 class="secondary-color mt20">
             If you're a beginner to fitness, you should consider other apps.<br/><br/>The Daily Verkout, always doable in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate difficulty</span>...and occasionally tougher.<br/><br/>There is little hand-holding or instruction. Modify any movements as necessary.
           </h3>          
